# p-scape

./: .env.example  .gitignore  .vercelignore  AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  vercel.json
pnorm/: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
pnorm/data/: austin_car_r1000.npz  austin_car_r2000.npz  austin_car_r3000.npz  austin_foot_r1600.npz  austin_foot_r200.npz  austin_foot_r400.npz  austin_foot_r800.npz  barcelona_car_r1000.npz  barcelona_car_r2000.npz  barcelona_car_r3000.npz  barcelona_foot_core_r200.npz  barcelona_foot_core_r400.npz  barcelona_foot_core_r800.npz  barcelona_foot_r1600.npz  barcelona_foot_r200.npz  barcelona_foot_r400.npz  barcelona_foot_r800.npz  car_hires_r1000.npz  car_r2000.npz  car_r3000.npz  chicago_car_r1000.npz  chicago_car_r2000.npz  chicago_car_r3000.npz  chicago_foot_r200.npz  chicago_foot_r400.npz  chicago_foot_r800.npz  circuity_grid.npz  dc_car_r1000.npz  dc_car_r2000.npz  dc_car_r3000.npz  dc_foot_r1600.npz  dc_foot_r200.npz  dc_foot_r400.npz  dc_foot_r800.npz  explorer.html  foot2_r1000.npz  foot2_r2000.npz  foot2_r500.npz  foot_hires_r500.npz  foot_r1000.npz  (+51 more)
pnorm/docs/: data-acquisition.md  journal.md  methodology.typ  plan.md  setup.md
pnorm/scripts/: add_boulder.sh  add_katy.sh  add_madison.sh  build_explorer.py  build_tiles.sh  charlotte_and_deploy.sh  charlottesville_after_charlotte.sh  circuity_grid.py  circuity_map.py  circuity_map_multi.py  circuity_probe.py  deploy.sh  edinburgh_then_london.sh  explorer_template.html  fix_dc_barcelona_add_sf.sh  (+20 more)
(+20 files in other folders)
