[project]
name = "isochrone-metric"
version = "0.0.1"
description = "Isochrone-derived effective-time metric on geographic space."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "shapely",
    "geopandas",
    "pyproj",
    "rasterio",
    "matplotlib",
    "folium",
    "requests",
    "tqdm",
    "scikit-fmm",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "ipykernel", "jupyterlab"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/isochrone_metric"]
