[project]
name = "pnorm"
version = "0.0.0"
description = "Effective L^p norm of urban travel-time geometry."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "requests",
    "httpx",
    "matplotlib",
    "pyproj",
    "tqdm",
    "folium",
    "branca",
    "shapely",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "ipykernel", "jupyterlab"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pnorm"]
